# 13_salesoffer

./: .gitignore  README.md  offer_content.md  pyproject.toml
src/sales_offer/: crew.py  main.py
src/sales_offer/config/: agents.yaml  tasks.yaml
