[project]
name = "sales_offer"
version = "0.1.0"
description = "sales-offer using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2",
    "langchain-core>=0.2.30",
]

[project.scripts]
sales_offer = "sales_offer.main:run"
run_crew = "sales_offer.main:run"
train = "sales_offer.main:train"
replay = "sales_offer.main:replay"
test = "sales_offer.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
